add ui framework

--- a/plugin.xml
+++ b/plugin.xml
@@ -7,5 +7,111 @@
             class="com.xclenter.test.ui.startup.Startup">
       </startup>
    </extension>
+   <extension
+         point="org.eclipse.ui.actionSets">
+      <actionSet
+            id="MonitorEclipse.actionSet"
+            label="Sample Action Set"
+            visible="true">
+         <menu
+               id="xclenter"
+               label="Xclenter">
+            <separator
+                  name="controlLog">
+            </separator>
+         </menu>
+          <menu
+               id="exam"
+               label="exam"
+               path="xclenter/controlLog">
+            <separator
+                  name="examGroup">
+            </separator>
+         </menu>
+          <action
+               class="com.xclenter.test.ui.actions.exam.InfoAction"
+               icon="icons/sample.gif"
+               id="exam.info"
+               label="info"
+               menubarPath="xclenter/exam/examGroup"
+               tooltip="info">
+         </action>
+          <action
+               class="com.xclenter.test.ui.actions.exam.SubmitAction"
+               icon="icons/sample.gif"
+               id="exam.submit"
+               label="submit"
+               menubarPath="xclenter/exam/examGroup"
+               tooltip="submit">
+         </action>
+         <action
+               class="com.xclenter.test.ui.actions.exam.DownloadAction"
+               icon="icons/sample.gif"
+               id="exam.download"
+               label="download"
+               menubarPath="xclenter/exam/examGroup"
+               tooltip="download">
+         </action>
+         <menu
+               id="homework"
+               label="homework"
+               path="xclenter/controlLog">
+            <separator
+                  name="homeworkGroup">
+            </separator>
+         </menu>
+          <action
+               class="com.xclenter.test.ui.actions.homework.InfoAction"
+               icon="icons/sample.gif"
+               id="homework.info"
+               label="info"
+               menubarPath="xclenter/homework/homeworkGroup"
+               tooltip="info">
+         </action>
+          <action
+               class="com.xclenter.test.ui.actions.homework.SubmitAction"
+               icon="icons/sample.gif"
+               id="homework.submit"
+               label="submit"
+               menubarPath="xclenter/homework/homeworkGroup"
+               tooltip="submit">
+         </action>
+          <action
+               class="com.xclenter.test.ui.actions.homework.DownloadAction"
+               icon="icons/sample.gif"
+               id="homework.download"
+               label="download"
+               menubarPath="xclenter/homework/homeworkGroup"
+               tooltip="download">
+         </action>
+          <action
+               class="com.xclenter.test.ui.actions.StopLogAction"
+               icon="icons/sample.gif"
+               id="xclenter.actions.controlLog.StoptLogAction"
+               label="Stop Log(test"
+               menubarPath="xclenter/controlLog"
+               toolbarPath="controlLog"
+               tooltip="StopLog">
+         </action>
+         <action
+               class="com.xclenter.test.ui.actions.StartLogAction"
+               icon="icons/sample.gif"
+               id="xclenter.actions.controlLog.StartLogAction"
+               label="Start Log(test"
+               menubarPath="xclenter/controlLog"
+               toolbarPath="controlLog"
+               tooltip="StartLog">
+         </action>
+         <action
+               class="com.xclenter.test.ui.actions.LoginAction"
+               icon="icons/sample.gif"
+               id="xclenter.actions.controlLog.LoginAction"
+               label="Login"
+               menubarPath="xclenter/controlLog"
+               toolbarPath="controlLog"
+               tooltip="Login">
+         </action>
+      </actionSet>
+   </extension>
 
 </plugin>
