finish most functions of login : clear environment when successfully login

--- a/build.properties
+++ b/build.properties
@@ -3,4 +3,15 @@ output.. = bin/
 bin.includes = META-INF/,\
                plugin.xml,\
                .,\
-               lib/
+               lib/log4j-api-2.5.jar,\
+               lib/log4j-core-2.5.jar,\
+               lib/commons-codec-1.9.jar,\
+               lib/commons-logging-1.2.jar,\
+               lib/httpclient-4.5.2.jar,\
+               lib/httpclient-cache-4.5.2.jar,\
+               lib/httpcore-4.4.4.jar,\
+               lib/json-lib-2.4-jdk15.jar,\
+               lib/commons-lang-2.6.jar,\
+               lib/commons-beanutils.jar,\
+               lib/ezmorph-1.0.6.jar,\
+               lib/commons-collections-3.2.1.jar
