finish upload && finish framework of download

--- a/build.properties
+++ b/build.properties
@@ -10,8 +10,15 @@ bin.includes = META-INF/,\
                lib/httpclient-4.5.2.jar,\
                lib/httpclient-cache-4.5.2.jar,\
                lib/httpcore-4.4.4.jar,\
-               lib/json-lib-2.4-jdk15.jar,\
                lib/commons-lang-2.6.jar,\
                lib/commons-beanutils.jar,\
                lib/ezmorph-1.0.6.jar,\
-               lib/commons-collections-3.2.1.jar
+               lib/commons-collections-3.2.1.jar,\
+               lib/keyczar-0.71h.jar,\
+               lib/org.json.jar,\
+               encrypt_key/,\
+               lib/httpmime-4.5.2.jar,\
+               lib/fluent-hc-4.5.2.jar,\
+               lib/jna-4.1.0.jar,\
+               lib/jna-platform-4.1.0.jar,\
+               lib/httpclient-win-4.5.2.jar
