--- a/build.properties
+++ b/build.properties
@@ -20,4 +20,5 @@ bin.includes = META-INF/,\
                lib/fluent-hc-4.5.2.jar,\
                lib/jna-4.1.0.jar,\
                lib/jna-platform-4.1.0.jar,\
-               lib/httpclient-win-4.5.2.jar
+               lib/httpclient-win-4.5.2.jar,\
+               lib/processInvoker.jar
